<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="197dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="9">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginTop="16dp"
            android:layout_weight="2"
            android:fontFamily="@font/josefin_sans_bold"
            android:onClick="switchFragment"
            android:tag="1"
            android:text="@string/upload_image"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginTop="16dp"
            android:layout_weight="2"
            android:fontFamily="@font/josefin_sans_bold"
            android:onClick="switchFragment"
            android:tag="2"
            android:text="@string/reverse_search"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/btnF2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginTop="16dp"
            android:layout_weight="2"
            android:fontFamily="@font/josefin_sans_bold"
            android:onClick="switchFragment"
            android:tag="3"
            android:text="@string/show_saved_images"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>